# Emu51

./: CMakeLists.txt  README.md  TODO.md  asm_man.txt  asm_rev.txt  asm_tabl.txt  code_51.cpp  code_editor.cpp  dis_asm.cpp  emu51.cpp  emu51.h  flags.cpp  gui.cpp  gui.h  history.txt  list51.txt  ramv.cpp  readme.md  readme.txt  regs.cpp  todo.txt
examples/: add.hex  mtask.asm  mtask2.asm  mtask2.hex  mtask2250.asm  p1.hex  test.hex
include/: code_51.h  code_editor.h  dis_asm.h  emu51.h  flags.h  gui.h  ramv.h  regs.h
web/: index.html
